--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "Default": "Data Source=devtestserver9999.database.windows.net;Initial Catalog=devtest9999;Persist Security Info=True;User ID=warrenkeil;Password=******"
+    "Default": "Data Source=devtest.cco6eyeq3sps.us-west-2.rds.amazonaws.com;Initial Catalog=devtestnew;Persist Security Info=True;User ID=Admin;Password=password;Pooling=False"
   },
   "Logging": {
     "LogLevel": {
